# dustpan

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: RELEASING.md
.github/workflows/: release.yml
crates/cleaner-cli/: Cargo.toml
crates/cleaner-cli/src/: cli.rs  display.rs  main.rs
crates/cleaner-core/: Cargo.toml
crates/cleaner-core/src/: analyzer.rs  categories.rs  cleaner.rs  config.rs  dev_artifacts.rs  error.rs  large_files.rs  lib.rs  scanner.rs
crates/cleaner-core/src/platform/: mod.rs  stub.rs  windows.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  gen_icons.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  history.rs  main.rs  state.rs
src/hooks/: useCleanProgress.ts  useDevScanProgress.ts  useLargeScanProgress.ts  useScanProgress.ts
src/lib/: api.ts  utils.ts
src/pages/: CleaningPage.tsx  DonePage.tsx  HistoryPage.tsx  HomePage.tsx  LargeFilesPage.tsx  ResultsPage.tsx  ScanningPage.tsx  SettingsPage.tsx
src/types/: index.ts
