[package]
name = "cleaner-core"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
rayon = "1"
dirs = "5"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
thiserror = "1"
trash = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Threading",
] }
